added virtual thumbstick

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<div id="run-around-game" style="height:100%;"></div>
+<div id="run-around-game" style="height:100%;overflow:hidden"></div>
 <script src="run-around-game.js"></script>
 
 </body>
